2014-02-21  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars: Simplified for use with Rcpp (>= 0.11.0)
	* src/Makevars.win: Ditto

	* src/Makevars: Define 'USE_CXX11=' for use with R-devel as we need
	C++11 for the 'long long int' type used on 64-bit machines for int64
	(or else the build fails on Windows / win-builder)
	* src/Makevars.win: Ditto

	[ in branch 0.2.1-updated ]
	* DESCRIPTION: Version 0.2.2

	* This version provides a minimal update to comply with CRAN changes
	leading up to R release 3.1.0
	* Once R 3.1.0 is out, we can release the newer version of the
	package which (at least currently, and on Windows) needs long long
	int support which is provided by the C++11 standard available for use
	with R in release 3.1.0 or later

2014-02-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Updated Description text
	* DESCRIPTION: Updated Import: of Rcpp to 'Rcpp (>= 0.11.0)'

2013-12-21  Dirk Eddelbuettel  <edd@debian.org>

	* R/zzz.R: Some edits, and extensions for date durations
	* src/RcppBDTdd.cpp: Use Rcpp::stop in case of error, also reworded
	some error messages

2013-12-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Use 'LinkingTo: BH' to simplify builds

2012-11-03  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppBDTpt.cpp: Added support for adding seconds (converted to
	duration) to pt objects

2012-10-31  Dirk Eddelbuettel  <edd@debian.org>

	* R/bdt.R: switch from fromDate() to setDate()

	* inst/include/RcppBDTdt.h: addMonth(), addYears() added which can't
	be done via date_duration as they need a date for context
	* src/RcppBDTdt.cpp: idem

	* src/RcppBDTdd.cpp: added weeks()

2012-10-26  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppBDTdd.h: New class date_duration
	* src/RcppBDTdd.cpp: Implementation
	* R/zzz.R: Dispatching new methods for new class

2012-10-25  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppBDTdt.h: A few more methods for dates
	* src/RcppBDTdt.cpp: Idem